# $Id$

EXTRA_DIST = 2theta.png a3pearson.png a3psvoigt.png chi2.png \
	     gauss_example.png gaussian.png lorentzian.png LoweMa.png \
	     modtchpv.png pearson7.png polynom5.png pseudo_voigt.png \
	     sigma.png sum_f.png sum_f_x_z.png t_xa1a2.png voigt.png \
	     w_1_sigma.png z_x_a.png emg.png doniachs.png
