# $Id$

EXTRA_DIST = 2theta.png a3pearson.png a3psvoigt.png chi2.png \
	     gauss_example.png gaussian.png gaussiana.png lorentzian.png \
	     lorentziana.png LoweMa.png modtchpv.png pearson7.png \
	     polynom5.png pseudo_voigt.png pseudo_voigta.png \
	     sigma.png sum_f.png sum_f_x_z.png voigt.png voigta.png\
	     w_1_sigma.png z_x_a.png emg.png doniachs.png
