# $Id$

EXTRA_DIST = active_mode.xpm \
             addpeak_mode.xpm \
             add_peak.xpm \
             bg_mode.xpm \
             cont_fit.xpm \
             down_arrow.xpm \
             edit_data.xpm \
             fityk.xpm \
             manual.xpm \
             mouse_l.xpm \
             mouse_r.xpm \
             open_data_custom.xpm \
             open_data.xpm \
             right_pane.xpm \
             run_fit.xpm \
             run_script.xpm \
             save_data.xpm \
             save_script.xpm \
             strip_bg.xpm \
             sum.xpm \
             undo_fit.xpm \
             up_arrow.xpm \
             zoom_all.xpm \
             zoom_left.xpm \
             zoom_mode.xpm \
             zoom_prev.xpm \
             zoom_right.xpm \
             zoom_vert.xpm \
             fityk.ico 


