# $Id$

## to find files not listed here use (in bash):
## for i in *.xpm; do [ `grep -c $i Makefile.am` -eq 0 ] && ls $i; done

EXTRA_DIST = \
active_mode.xpm \
addpeak_mode.xpm \
add_peak.xpm \
add.xpm \
bg_mode.xpm \
close.xpm \
colorsel.xpm \
color.xpm \
cont_fit.xpm \
convert.xpm \
copyfunc.xpm \
down_arrow.xpm \
edit_data.xpm \
editf.xpm \
filter.xpm \
fityk.xpm \
manual.xpm \
mouse_l.xpm \
mouse_r.xpm \
open_data_custom.xpm \
open_data.xpm \
rename.xpm \
right_pane.xpm \
run_fit.xpm \
run_script.xpm \
save_data.xpm \
save_script.xpm \
shiftup.xpm \
strip_bg.xpm \
sum.xpm \
undo_fit.xpm \
unused.xpm \
up_arrow.xpm \
zoom_all.xpm \
zoom_left.xpm \
zoom_mode.xpm \
zoom_prev.xpm \
zoom_right.xpm \
zoom_up.xpm \
zoom_vert.xpm \
zshift.xpm \
fityk.ico 

